# avito_lesson30

./: Readme.md  pyproject.toml
ads/: models.py  permissions.py  serialazers.py
ads/migrations/: 0001_initial.py  0002_alter_ad_name.py  0002_initial.py  0002_remove_ad_image.py  0003_ad_image.py  0003_rename_author_id_ad_author.py  0003_selection.py  0004_alter_ad_image.py  0004_category_slug_alter_ad_description_alter_ad_name.py  0005_alter_category_slug.py  0006_alter_category_slug.py  0007_alter_category_name.py  0008_remove_category_slug.py  0009_category_slug.py  0010_alter_category_slug.py  0011_alter_ad_description.py
ads/urls/: ad.py  cat.py
ads/views/: ad.py  category.py  selection.py
avito/: settings.py  urls.py
datasets/: ad.json  csv_as_json.py  location.json  user.json
tests/: factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py  0002_alter_user_birth_date.py  0002_alter_user_role.py  0002_remove_user_username.py  0003_alter_user_birth_date.py  0003_alter_user_password.py  0004_alter_user_age_alter_user_birth_date.py  0005_alter_user_birth_date.py  0006_alter_user_birth_date.py
